# electricity_time_series

./: .gitignore  informe.tex  pyproject.toml  references.bib
assets/: metrics_arima.csv  metrics_comparison.csv  metrics_hybrid.csv  metrics_lasso.csv  metrics_var.csv  metrics_xgboost.csv
data/: gold_netherlands.csv
scripts/: arima.py  common.py  data_cleaning.py  extract_figures.py  hibrido  hibrido.py  lasso_model.py  ridge.py  var.py  xgboost_model.py
sections/: 01-portada.tex  02-metodologia.tex  03-analisis-resultados.tex  04-aplicacion.tex  05-conclusiones.tex
